Topic 10166 - Try to use "font: -moz-info" instead of "font-size: 80%" for buttons to avoid unreadable text in CJK languages

--- a/chrome/skin/overlay.css
+++ b/chrome/skin/overlay.css
@@ -145,7 +145,7 @@ toolbar[mode="full"] #abp-toolbarbutton[type="menu"]
 
 .abp-contributebutton-btn
 {
-  font-size: 80%;
+  font: -moz-info;
   margin-left: 40px;
   margin-right: 40px;
 }
